Remove RelExamToLabModel
